School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/valid/OwnTests_stepB/valid/tests_operations/add_Float_Int.deca
//Addition d'un float avec un int dans un float
//
{
    float f1 = 0.5;
    int i1 = 1;
    float f2 = f1 + i1;
    
    print(f2);
}
