School_projects/SecondYear_projects/Java_programming/Java_compiler/src/test/deca/context/invalid/OwnTests_stepB/invalid/tests_operations/add_Int_Float.deca
//Addition d'un float avec un int dans un int
//
{
    float f1 = 0.5;
    int i1 = 1;
    int i2 = f1 + i1;
}